# civitas

./: ABRIR_CIVITAS_UI.bat  CONTRIBUTING.md  INSTALAR_UI_PYTHON.bat  LICENSE  README.md  SECURITY.md  VALIDATION_LOG.txt  VALIDATION_LOG_FIX.txt
build_windows/: BUILD_CORE_RUST.bat  BUILD_RELEASE_PACKAGE.bat
core-rust/: Cargo.toml
core-rust/src/: main.rs
docs/: CASE_WORKFLOW.md  ENTITY_MODEL.md  ETHICS.md
examples/: QUICKSTART.md  example_chat.txt
ui-python/: civitas_ui.py  requirements.txt
