[package]
name = "civitas_core"
version = "1.0.0"
edition = "2021"
authors = ["xtr4ng3"]
license = "MIT"
description = "Local digital evidence and scam intelligence core."

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
